# viammo-backend-alpha

./: .env.example  .gitignore  hotel_reservation_search_keywords.jsonl  pyproject.toml  save_detailed_tripadvisor_location_data_to_mongo.py  save_hotels_to_supabase.py  scan_email_server.py  scrape_hotel_ids.py  search_email.py  search_tripadvisor_collections.py  test_openai.py  viator.ipynb  viator.py  view_trip_calendar.py  view_trips.py
data/: extract_ids.py
data/aspen/tripadvisor-hotel_review/: 1.html  2.html  3.html  4.html  ids.jsonl
data/aspen/tripadvisor-restaurant_review/: 1.html  2.html  3.html  4.html  ids.jsonl
