[project]
name = "viammo-backend-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.21",
    "langchain-openai>=0.3.10",
    "pymongo>=4.11.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
